# OpenScope-System_Dashboard

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/openscope-agent/: Cargo.toml
crates/openscope-agent/src/: main.rs
crates/openscope-alerts/: Cargo.toml
crates/openscope-alerts/src/: lib.rs
crates/openscope-app/: Cargo.toml  tauri.conf.json
crates/openscope-app/capabilities/: default.json
crates/openscope-app/src/: commands.rs  forwarder.rs  main.rs  state.rs
crates/openscope-collect/: Cargo.toml
crates/openscope-collect/src/: lib.rs  mock.rs  scheduler.rs
crates/openscope-collect/src/cpu/: freq.rs  linux.rs  mod.rs  rapl.rs  temp.rs
crates/openscope-collect/src/disk/: linux.rs  mod.rs
crates/openscope-collect/src/memory/: linux.rs  mod.rs
crates/openscope-collect/src/network/: linux.rs  mod.rs
crates/openscope-collect/src/process/: actions.rs  linux.rs  mod.rs
crates/openscope-collect/tests/: perf.rs
crates/openscope-core/: Cargo.toml
crates/openscope-core/src/: bus.rs  collector.rs  error.rs  history.rs  lib.rs  sample.rs  source.rs
crates/openscope-history/: Cargo.toml
crates/openscope-history/src/: hot.rs  lib.rs
crates/openscope-plugins/: Cargo.toml
crates/openscope-plugins/src/: lib.rs
crates/openscope-remote/: Cargo.toml
crates/openscope-remote/src/: lib.rs
docs/: 01-architecture.md  02-choix-techniques.md  03-arborescence.md  04-interfaces.md  05-mvp.md  06-roadmap.md  07-github-tasks.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/charts/: TimeSeries.tsx
frontend/src/ipc/: client.ts  types.ts
frontend/src/ipc/bindings/: ActionOutcome.ts  BatchDto.ts  Capabilities.ts  CollectorCapability.ts  HotSeriesDto.ts  ProcessRowDto.ts  SampleDto.ts  ValueDto.ts
frontend/src/layout/: Sidebar.tsx
frontend/src/layout/grid/: Grid.tsx
frontend/src/pages/: Dashboard.tsx  Processes.tsx  Settings.tsx
frontend/src/stores/: capabilities.ts  metrics.ts  navigation.ts
frontend/src/theme/: app.css  tokens.css
frontend/src/utils/: format.ts
frontend/src/widgets/: CpuCores.tsx  CpuInstant.tsx  CpuUsage.tsx  DiskIo.tsx  MemoryInstant.tsx  MemoryUsage.tsx  NetworkIo.tsx  TopProcesses.tsx  registry.tsx
xtask/: Cargo.toml
xtask/src/: main.rs
