[package]
name = "openscope-alerts"
description = "Moteur d'alertes : règles déclaratives, machine à états anti-flapping, notifications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
openscope-core = { workspace = true }
