[package]
name = "openscope-app"
description = "Application desktop OpenScope (Tauri) — point d'assemblage de tous les modules"
publish.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "openscope"
path = "src/main.rs"

[features]
# Génération des définitions TypeScript des DTOs IPC (`cargo xtask gen-types`).
ts = ["dep:ts-rs", "openscope-core/ts"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
openscope-core = { workspace = true }
openscope-collect = { workspace = true }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ts-rs = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
