[package]
name = "openscope-collect"
description = "Collecteurs de métriques système locaux (CPU, RAM, GPU, disques, réseau, processus, Docker, VM)"
publish.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
openscope-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
