[package]
name = "openscope-history"
description = "Historique des métriques : fenêtre chaude en mémoire, persistance SQLite, exports, snapshots"
publish.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
openscope-core = { workspace = true }
